move getRandomThrow into get-random-throw.js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <br>
                 COMPUTER CHOICE: <span id="thrown-span"></span>
                 <br>
-                <span id="message-span">MESSAGE: You won! or You Lost! or You got a draw!</span>
+                <span id="message-span">MESSAGE: Will you win, lose, or draw?</span>
             </p>
 
         </section>
