condense wins, losses, and draws spans into a single results span

--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
                 <br>
                 <button id="click-button">CLICK</button>
                 <br>
+                COMPUTER CHOICE: <span id="thrown-span"></span>
+                <br>
+                <span id="message-span">Will you win, lose, or draw?</span>
+<!--                <br>
                 WINS: <span id="wins-span">0</span>
                 <br>
                 LOSSES: <span id="losses-span">0</span>
                 <br>
                 DRAWS: <span id="draws-span">0</span>
-                <br>
-                COMPUTER CHOICE: <span id="thrown-span"></span>
-                <br>
-                <span id="message-span">MESSAGE: Will you win, lose, or draw?</span>
+-->                <br>
+                Results: <span id="results-span"></span>
             </p>
 
         </section>
