--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <section class ="player-options">
                 <label>
-                    <input type="radio" name="game" value="rock" id="rock-button">
+                    <input type="radio" name="game" value="rock" id="rock-button" checked>
                     <img src="./assets/rock.jpeg" alt="rock">
                 </label>
                 <label>
@@ -50,6 +50,11 @@
                 <button id="play-button">PLAY</button>
                 <div>
                 <span id="thrown-span"></span>
+                <!-- <div id="conceal-image" class="conceal-image"> -->
+                    <img src="" id="my-img-scissors"/>
+                    <img src="" id="my-img-rock"/>
+                    <img src="" id="my-img-paper"/>
+                <!-- </div> -->
                 <br>
                 <span id="message-span">Will you win, lose, or draw?</span>
                 <br>
