--- a/index.html
+++ b/index.html
@@ -45,26 +45,29 @@
                     <img src="./assets/scissors.jpeg" alt="scissors">
                 </label>
             </section>
-
+            
             <section class="play-area">
-                <button id="play-button">PLAY</button>
+                <div class="button-div">
+                    <button id="play-button">PLAY</button>
+                    <p>
+                        <span id="message-span">Will you win, lose, or draw?</span>
+                    </p>
+                    <p>
+                        <span id="results-span">Wins: 0; Losses 0; Draws: 0</span>
+                    </p>
+                    <button id="reset-button">Reset</button>
+                    <p>
+                        Number of resets: <span id="reset-span"></span>
+                    </p>
+                </div>                
                 <div>
-                <span id="thrown-span"></span>
-                <!-- <div id="conceal-image" class="conceal-image"> -->
+                    <span id="computer-chose"></span>
+                    <br>
+<!--                    <span id="thrown-span"></span>-->
                     <img src="" id="my-img-scissors"/>
                     <img src="" id="my-img-rock"/>
                     <img src="" id="my-img-paper"/>
-                <!-- </div> -->
-                <br>
-                <span id="message-span">Will you win, lose, or draw?</span>
-                <br>
-                <span id="results-span"></span>
-                <br>
-            </div>
-                <br>
-                <button id="reset-button">Reset</button>
-                
-                Number of resets: <span id="reset-span"></span>
+                </div>
             </section>
 
     </main>
