--- a/index2.html
+++ b/index2.html
@@ -47,26 +47,27 @@
             </section>
 
             <section class="play-area">
-                <div>
+                <div class="button-div">
                     <button id="play-button">PLAY</button>
-                    <br>
+                    <p>
                     <span id="message-span">Will you win, lose, or draw?</span>
-                    <br>
-                    <span id="results-span"></span>
-                    <br>
+                    </p>
+                    <p>
+                    <span id="results-span">Wins: 0; Losses 0; Draws: 0</span>
+                    </p>
                     <button id="reset-button">Reset</button>
-                    <br>
+                    <p>
                     Number of resets: <span id="reset-span"></span>
-                </div>
+                    </p>
+                </div>                
                 <div>
+                    <span id="computer-chose"></span>
+                    <br>
                     <span id="thrown-span"></span>
-                    <!-- <div id="conceal-image" class="conceal-image"> -->
-                        <img src="" id="my-img-scissors"/>
-                        <img src="" id="my-img-rock"/>
-                        <img src="" id="my-img-paper"/>
-                    <!-- </div> -->
+                    <img src="" id="my-img-scissors"/>
+                    <img src="" id="my-img-rock"/>
+                    <img src="" id="my-img-paper"/>
                 </div>
-                    
             </section>
 
     </main>
